--- a/Back/package.json
+++ b/Back/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.4"
+    "mongoose": "^7.3.4",
+    "mongoose-unique-validator": "^4.0.0",
+    "validator": "^13.9.0"
   }
 }
