--- a/Back/package.json
+++ b/Back/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.4.0",
     "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "xss-clean": "^0.1.4"
   }
 }
